更新Supabase配置到新项目

--- a/ai-edu-platform/frontend/vercel.json
+++ b/ai-edu-platform/frontend/vercel.json
@@ -10,7 +10,11 @@
     },
     {
       "source": "/api/:path*",
-      "destination": "https://rqgvxjltlupikmzxvqrc.supabase.co/functions/v1/:path*"
+      "destination": "https://tebfpvgavpmujdjofdye.supabase.co/functions/v1/:path*"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
